# silver-spork

./: .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  whitelist.txt
.github/workflows/: push.yml  python.yml
docs/: conf.py  index.md
eks/: aws-load-balancer-controller-service-account.yaml  eks-deployment.yaml  eks-service.yaml  eks-silver-spork.yaml
scripts/: sort_file.py  upload_image_to_ecr.py
services/server/: Dockerfile
src/silver_spork/: __init__.py  skeleton.py
terraform/: eks.tf  remote_state_config.tf  remote_state_config.tf.example  variables.tf
terraform/init_new_account/: remote_state_init.tf
terraform_init/: remote_state_init.tf
tests/: conftest.py  test_app.py  test_skeleton.py
