[build-system]
requires = [ "setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel",]
build-backend = "setuptools.build_meta"

["tool.black"]
line-length = 88

["tool.isort"]
profile = "black"

["tool.pytest.ini_options"]
testpaths = [ "tests",]
addopts = [ "--cov-report=term-missing", "--cov-fail-under=100", "--verbose",]
norecursedirs = [ "dist", "build", ".tox",]

["tool.coverage.run"]
branch = true
source = [ "silver_spork",]

["tool.coverage.paths"]
source = [ "src/", "*/site-packages/",]

["tool.coverage.report"]
skip_covered = true
show_missing = true
exclude_lines = [ "pragma: no cover", "def __repr__", "if self\\.debug", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:",]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
